spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ nav a{
     color:black;
 }
 
-@media screen and (max-width: 576px){
+/*@media screen and (max-width: 576px){
 .jumbotron {
      padding-top:0; 
      padding-bottom:0;
@@ -26,7 +26,8 @@ nav a{
   width:400px;
   height:250px;
 }
-}
+}*/
+
 
 .jumbotron{
     position: relative;
